After an evaluation, GNOME has moved from Bugzilla to GitLab. Learn more about GitLab.
No new issues can be reported in GNOME Bugzilla anymore.
To report an issue in a GNOME project, go to GNOME GitLab.
Do not go to GNOME Gitlab for: Bluefish, Doxygen, GnuCash, GStreamer, java-gnome, LDTP, NetworkManager, Tomboy.
Bug 764727 - Fix "format not a string literal" error
Fix "format not a string literal" error
Status: RESOLVED FIXED
Product: gnome-control-center
Classification: Core
Component: general
unspecified
Other All
: Normal normal
: ---
Assigned To: Control-Center Maintainers
Control-Center Maintainers
Depends on:
Blocks:
 
 
Reported: 2016-04-07 13:30 UTC by Bastien Nocera
Modified: 2016-04-08 09:32 UTC
See Also:
GNOME target: ---
GNOME version: ---


Attachments
sound: Fix "format not a string literal" error (2.03 KB, patch)
2016-04-07 13:30 UTC, Bastien Nocera
committed Details | Review
user-accounts: Work-around "format not a string literal" error (1.08 KB, patch)
2016-04-07 13:30 UTC, Bastien Nocera
committed Details | Review
datetime: Fix "format not a string literal" error (1.73 KB, patch)
2016-04-07 13:30 UTC, Bastien Nocera
committed Details | Review
network: Fix "format not a string literal" error (4.68 KB, patch)
2016-04-07 13:30 UTC, Bastien Nocera
committed Details | Review
printers: Fix "format not a string literal" error (2.81 KB, patch)
2016-04-08 09:29 UTC, Bastien Nocera
committed Details | Review

Description Bastien Nocera 2016-04-07 13:30:30 UTC
Needs sanity checking
Comment 1 Bastien Nocera 2016-04-07 13:30:35 UTC
Created attachment 325534 [details] [review]
sound: Fix "format not a string literal" error
Comment 2 Bastien Nocera 2016-04-07 13:30:41 UTC
Created attachment 325535 [details] [review]
user-accounts: Work-around "format not a string literal" error

This isn't possible to fix without quite a bit of code movement. This
will do for now though.
Comment 3 Bastien Nocera 2016-04-07 13:30:47 UTC
Created attachment 325536 [details] [review]
datetime: Fix "format not a string literal" error
Comment 4 Bastien Nocera 2016-04-07 13:30:52 UTC
Created attachment 325537 [details] [review]
network: Fix "format not a string literal" error
Comment 5 Bastien Nocera 2016-04-08 09:29:56 UTC
Created attachment 325575 [details] [review]
printers: Fix "format not a string literal" error
Comment 6 Bastien Nocera 2016-04-08 09:32:32 UTC
Attachment 325534 [details] pushed as 65d9bd0 - sound: Fix "format not a string literal" error
Attachment 325535 [details] pushed as c92aa11 - user-accounts: Work-around "format not a string literal" error
Attachment 325536 [details] pushed as ec5d9d0 - datetime: Fix "format not a string literal" error
Attachment 325537 [details] pushed as 9c70369 - network: Fix "format not a string literal" error
Attachment 325575 [details] pushed as 82b73e5 - printers: Fix "format not a string literal" error